kubernetes/mailpit/mailpit.yaml
#
# Installs mailpit mail catcher service
# UI will be available as http://mailpit.local
#
# To install
#   kubectl -n mailpit apply -f mailpit.yaml
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: mailpit
  labels:
    name: mailpit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.24.1
          ports:
            - name: http
              containerPort: 8025
            - name: smtp
              containerPort: 1025
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app: mailpit
spec:
  type: ClusterIP
  selector:
    app: mailpit
  ports:
    - name: http
      port: 80
      targetPort: 8025
    - name: smtp
      port: 1025
      targetPort: 1025
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app: mailpit
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: mailpit.local  # <-- Replace with your DNS if needed
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit
                port:
                  number: 80
